add configuration to maven compiler